# Volta

./: .gitignore  BENCHMARK.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DISCLAIMER.md  LICENSE  PRD.md  QUALITY_POLICY.md  README.md  brain.vt  model.vt  plan.md  plans.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  installer-artifacts.yml  nightly-quality.yml  policy.yml  pr-gates.yml  release-gates.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
benches/: benchmarks.rs
benchmarks/: README.md
benchmarks/baselines/: cuda-infer-memory-peak-bytes.txt  cuda-infer-parity.json  cuda-train-memory-peak-bytes.txt  cuda-train-replay.json  example-linux-x86_64-generic.json  tensor-ops-release.txt
docs/: ARCHITECTURE.md  BENCHMARKS.md  ONNX_COVERAGE.md  ROADMAP.md
docs/community/: first-pr-guide.md
docs/governance/: QUALITY_POLICY.md  backend-capability-matrix.md  ci-flaky-registry.md  ci-stale-reference-sweep-2026-02-23.md  ci-topology.md  ci-weekly-health-template.md  contracts-tier-a.md  cuda-determinism-policy.md  cuda-training-determinism.md  determinism-evidence-1.2.0.md  determinism-scope.md  docs-contract-audit-1.2.0.md  evidence-2026-02-23-local-verification.md  incident-playbook.md  numerical-stability-policy.md  onnx-wave2-5-intake.md  operational-policy.md  owner-model.md  perf-governance.md  perf-slo.md  rfc-template.md  scheduler-optimizer-architecture.md  self-review-phase7.md
docs/guides/: installers.md  windows-installer-ui.md
docs/plans/: 2026-02-20-volta-cuda-inference-mvp-design.md  2026-02-20-volta-engine-runtime-roadmap-design.md  2026-02-20-volta-phase1-cuda-inference-mvp-implementation.md  2026-02-20-volta-quality-fortress-design.md  2026-02-20-volta-quality-fortress-wave1-implementation.md  2026-02-20-volta-v1-multi-backend-roadmap-design.md  (+3 more)
examples/: autoencoder.vt  bench_100epoch.vt  bench_10epoch.vt  bench_1epoch.vt  bench_adagrad.vt  bench_adam.vt  bench_adamw.vt  bench_baseline.vt  bench_dropout.vt  bench_gelu.vt  bench_infer.c  bench_layernorm.vt  bench_leaky.vt  bench_pytorch.py  bench_real.vt  bench_sigmoid.vt  bench_silu.vt  bench_softmax.vt  bench_tanh.vt  bench_wide.vt  cnn_classifier.vt  embedding_projector.vt  features_test.vt  mnist.vt  pytorch_parity.py  resnet_block.vt  transformer_ffn.vt  xor.vt
examples/bench_real.train_rust._rust_crate/: Cargo.toml  build.rs
examples/bench_real.train_rust._rust_crate/examples/: bench_affinity.rs  bench_b128.rs  bench_bwd_variants.rs  bench_final.rs  bench_final2.rs  bench_final3.rs  bench_fused.rs  bench_gemm_backends.rs  bench_inference.rs  bench_microkernel.rs  bench_mlp2048.rs  bench_mlp256.rs  bench_official_v2.rs  bench_official_v3.rs  bench_official_v4.rs  bench_par.rs  bench_phase_timing.rs  bench_pipeline.rs  bench_pipeline2.rs  bench_pipeline3.rs  profiler.rs
examples/bench_real.train_rust._rust_crate/examples/common/: mod.rs
examples/bench_real.train_rust._rust_crate/src/: lib.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: lexer.rs  onnx_bytes.rs  parser.rs
install/: install.ps1  install.sh
src/: ast.rs  autopilot.rs  diagnostics.rs  executor.rs  lexer.rs  lib.rs  main.rs  parser.rs  rules.rs  semantic.rs
tests/: autograd_gradcheck.rs  autograd_integration_roundtrip.rs  backend_capabilities.rs  backend_capability_matrix.rs  checkpoint_errors.rs  checkpoint_parity.rs  cli_interface.rs  cli_smoke.rs  cuda_backend_scaffold.rs  cuda_infer_determinism.rs  cuda_infer_memory_guard.rs  cuda_infer_parity.rs  cuda_infer_parity_fuzz.rs  cuda_kernel_dispatch.rs  cuda_new_ops_parity.rs  cuda_optimizer_parity.rs  cuda_real_elementwise.rs  cuda_real_matmul.rs  cuda_train_artifacts.rs  cuda_train_backward.rs  cuda_train_e2e.rs  cuda_train_memory_guard.rs  cuda_train_no_fallback.rs  cuda_train_replay.rs  deep_recursion.rs  determinism_regression.rs  docs_onboarding_sync.rs  docs_sync.rs  error_messages_quality.rs  execution_plan_backend_hints.rs  execution_plan_cache.rs  governance_docs_content.rs  governance_docs_presence.rs  infer_partial_batch.rs  interop_onnx_linear.rs  interop_onnx_mlp.rs  interop_onnx_parser.rs  interop_onnx_real_fixture.rs  interop_onnx_wave2_contract.rs  interop_onnx_wave2_e2e.rs  (+17 more)
(+287 files in other folders)
