[package]
name = "volta"
version = "0.1.0"
edition = "2024"

[features]
default = []
onnx-import = ["dep:tract-onnx", "dep:prost"]

[dependencies]
cudarc = { version = "0.19.2", default-features = false, features = ["std", "driver", "runtime", "cublas", "nvrtc", "fallback-dynamic-loading", "cuda-13010"] }
tract-onnx = { version = "0.22", optional = true }
prost = { version = "0.11.9", optional = true }

[dev-dependencies]
proptest = "1"
