 [package]
name = "volta"
version = "1.2.0"
edition = "2024"
license = "Apache-2.0"

[features]
default = ["parallel"]
cuda = ["dep:cudarc"]
onnx-import = ["dep:tract-onnx", "dep:prost"]
parallel = ["dep:rayon"]
llvm-codegen = ["dep:inkwell"]
debug-verify = []

[dependencies]
cudarc = { version = "0.19.2", optional = true, default-features = false, features = ["std", "driver", "runtime", "cublas", "nvrtc", "fallback-dynamic-loading", "cuda-13010"] }
rayon = { version = "1", optional = true }
inkwell = { version = "0.8.0", features = ["llvm21-1"], optional = true }
tract-onnx = { version = "0.22", optional = true }
prost = { version = "0.11.9", optional = true }
matrixmultiply = "0.3"
gemm = { version = "0.19", features = ["rayon", "x86-v4"] }
siphasher = "1.0.2"
rustc-hash = "2.1.1"
csv = "1.4.0"
serde = "1.0.228"
serde_derive = "1.0.228"
rand = "0.10.0"
rand_chacha = "0.10.0"
bincode = "2"
serde_json = "1.0.149"
walkdir = "2.5.0"
dirs = "6.0.0"
gguf = "0.1.2"
once_cell = "1.20"

[dev-dependencies]
proptest = "1"
csv = "1.4.0"

[profile.release]
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
opt-level     = 3

[profile.release.build-override]
opt-level = 3

[profile.dev]
opt-level = 1
