[package]
name = "volta_train_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
opt-level = 3

[features]
default = []
mkl = []

[dependencies]
gemm = { version = "0.19", features = ["rayon"] }
rayon = "1"
faer = { version = "0.21", default-features = false, features = ["rayon"] }

[[example]]
name = "bench_b128"
required-features = ["mkl"]

[[example]]
name = "bench_mlp256"
required-features = ["mkl"]

[[example]]
name = "bench_mlp2048"
required-features = ["mkl"]
